syntax = "proto3";
package proto;

message TestResponse {
    string message = 1;
}

message Empty {}

service CursorPlugin {
    rpc ExecuteJob(Empty) returns (TestResponse);
}
